<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <!-- =============================================================== -->
  <!-- Properties -->
  <!-- =============================================================== -->
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>17</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <project-name>KissLuler</project-name>

    <sb2version>2.7.0</sb2version>

  </properties>

  <!-- =============================================================== -->
  <!-- Informations du projet -->
  <!-- =============================================================== -->

  <!-- ===== Informations Maven ===== -->
  <modelVersion>4.0.0</modelVersion>
  <groupId>co.simplon.alt3</groupId>
  <artifactId>kiss-luler</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>


  <!-- ===== Informations générales ===== -->
  <name>${project-name}</name>
  <description>
      Application de crowdfunding spetialise dans la musique
  </description>
  <url>http://www.exemple.org/mon-appli</url>

  <!-- ===== Organisation ===== -->
  <organization>
    <name>Simplon</name>
    <url>http://www.exemple.org</url>
  </organization>

  <!-- ===== Licences ===== -->
  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <!-- =============================================================== -->
  <!-- CONFIG SPRINGBOOT-->
  <!-- =============================================================== -->

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.7.0</version>
  </parent>

  <!-- =============================================================== -->
  <!-- MODULES -->
  <!-- =============================================================== -->
  <modules>
    <module>test</module>
    <module>business</module>
    <module>web-app</module>
    <module>lib</module>
  </modules>

  <!-- ======================================================= -->
  <!-- GESTION DES DEPENDANCES -->
  <!-- ======================================================= -->
  <dependencyManagement>
    <dependencies>
      <!-- =========== Modules =========== -->
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>business</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>lib</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>test</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>web-app</artifactId>
        <version>${project.version}</version>
      </dependency>


      <!-- =========== Dependences common =========== -->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter</artifactId>
        <version>${sb2version}</version>
      </dependency>

      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>2.9.0</version>
      </dependency>

      <dependency>
        <groupId>com.auth0</groupId>
        <artifactId>java-jwt</artifactId>
        <version>3.19.2</version>
      </dependency>

      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>1.7.36</version>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <!-- =============================================================== -->
  <!-- DistributionManagement -->
  <!-- =============================================================== -->
  <distributionManagement>
    <site>
      <id>site-projet</id>
      <url>scp://localhost/tmp/</url>
    </site>
  </distributionManagement>


  <!-- =============================================================== -->
  <!-- PLUGINS -->
  <!-- =============================================================== -->
  <build>
    <pluginManagement>
      <plugins>

        <!-- Maven site -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>4.0.0-M3</version>
          <configuration>
            <!-- Je veux le site en français -->
            <locales>fr</locales>
            <port>9000</port>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <reporting>
    <plugins>
      <!-- Maven info report pour site -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>3.4.0</version>
      </plugin>

      <!-- ===== Rapport sur les tests ===== -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>3.0.0-M7</version>
        <configuration>
          <linkXRef>false</linkXRef>
        </configuration>
        <reportSets>
          <!-- reportSet d'agrégation des rapports des sous-projets (modules) -->
          <reportSet>
            <id>aggregate</id>
            <reports>
              <report>report</report>
            </reports>
            <!-- ne pas exécuter ce sous-rapport dans les sous-projets -->
            <inherited>false</inherited>
            <configuration>
              <aggregate>true</aggregate>
            </configuration>
          </reportSet>

          <!-- reportSet non agrégé, exécuté dans tous les sous-projets (modules) -->
          <reportSet>
            <id>modules</id>
            <!-- exécuter ce sous-rapport dans les sous-projets -->
            <inherited>true</inherited>
            <reports>
              <report>report</report>
            </reports>
            <configuration>
              <aggregate>false</aggregate>
            </configuration>
          </reportSet>
        </reportSets>
      </plugin>


      <!-- ===== Génération de la Javadoc ===== -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.4.0</version>
        <configuration>
          <quiet>true</quiet>
          <doclint>none</doclint>
          <locale>fr</locale>
        </configuration>
        <reportSets>
          <!-- reportSet exécuté dans tous les modules -->
          <reportSet>
            <reports>
              <report>javadoc</report>
            </reports>
          </reportSet>
          <!-- reportSet d'agrégation des rapports des sous-modules -->
          <reportSet>
            <id>aggregate</id>
            <inherited>false</inherited>
            <reports>
              <report>aggregate</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>

      <!-- ===== Rapport d'analyse du code par Checkstyle ===== -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.1.2</version>

        <reportSets>
          <!-- reportSet exécuté dans tous les modules -->
          <reportSet>
            <reports>
              <report>checkstyle</report>
            </reports>
          </reportSet>
          <!-- reportSet d'agrégation des rapports des sous-modules -->
          <reportSet>
            <id>checkstyle-aggregate</id>
            <inherited>false</inherited>
            <configuration>
              <skipExec>true</skipExec>
            </configuration>
            <reports>
              <report>checkstyle-aggregate</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>

</project>